Bugfix: fix layout for the Call CTA on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -556,7 +556,7 @@ body {
 }
 
 .min-h-max-vh {
-  height: calc(100vh - 140px);
+  height: calc(100vh - 200px);
 }
 
 h1, h2, h3, h4, h5 {
